css/mobilestyle.css
@media screen and (max-device-width: 500px), screen and (max-width:500px){
   body{
   		width: 400px;
		max-width: 400px;
		min-width: 400px;
		
   }
   #homelogo{
	margin-left: -19px;
	}
	.navbar{
	margin-top: 25px;
	width: 400px;
	max-width: 400px;
	min-width: 400px;
	}

	.navlinks li{
	float: left;
	margin: 0px 7px 0px 30px;
	font-size: 10px;
	font-weight: 10px;
	}

	.doodle{
	display: inline-block;
	margin: 100px 80px 0px 80px;
	width: 249px;
	height: 222px;
	}


	.name {
	width: 292px;
	height: 192px;	
	position: relative;
	top: -80px;
	left: 50px;
	}
	
	.emaillink{
		font-size: 100px;
	}

	#fdivcontact{
	margin-left: 20px;
	width: 390px;
	background-position: center center;
	background-image: contain;
	}

	.homebox {
	margin: 0 auto;
	max-width: 400px;
	min-width: 400px;
	width: 400px;
	margin: 0px;
	padding: 0px;
	}


	#firstbox{
	width: 400px;
	min-width: 400px;
	max-width: 400px;
	height: 500px;
	}
	.downdown{
	display: none; 
	}


	#secondbox{
	width: 400px;
	min-width: 400px;
	max-width: 400px;
	height: 1000px;
	}
	.hello{
	width: 300px;
	height: 50px;
	background-image: url('../images/hello.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	
	}

	.myname{
	width: 300px;
	height: 123px;	
	background-image: url('../images/nametop.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	
	}
	.firstlinks{
	width: 250px;
	height: 20px;
	margin-top: -30px;
	margin-right: 20px;
	}


	.aboutme{
	width: 302px;
	height: 480px;
	position: relative;
	top: 280px;
	left: 20px;
	
	}

	.skills{
	width: 400px;
	height: 550px;
	padding: 0px;
	margin: 0px;
	position: relative;
	top: 150px;
	background-image: url('../images/mobskills.png');
	
	}
	.skills span{
		display: block;
		float: none;

	}
	.skillset{
	width: 100px;
	height: 100px;
	font-size: 20px;
	text-align: center;	

	}

	#design{
		margin-left: 40%;
		margin-top: 170px;
	}
 	#frontend{
		font-size: 20px;
		margin-top: -20px;
		margin-left: 40%;
	}
	#backend{
		margin-top: 40px;
		margin-left: 40%;
	}

    #thirdboxtitle{
	margin: -50px auto 0 auto;
	width: 400px;
	height: 300px;
	background-image: url('../images/port1.png');
	background-size: cover;
	background-repeat: no-repeat;
	}
	#thirdboxtitleb{
		display: block;
		width: 400px;
		height: 300px;
		background-image: url('../images/port2.png');
		background-size: cover;
		background-repeat: no-repeat;

	}


	.projectbox{
		width: 380px;
		height: 304px;
		border: 1px solid #FFFFFF;
		background-color: #9e9e9e;
	}
	
	#githubbutton{
	top: 200px;
	right: 10px;
	}
	#sitebutton{
	top: 235px;
	right: -108px;
	}

	
	#thirdbox{
		width: 400px;
		max-width: 400px;
		min-width: 400px;
		height: 2550px;
	}
	#fourthbox{
		width: 400px;
		max-width: 400px;
		min-width: 400px;
		height: 950px;
	}

	#fdivinfo{
		margin-left: 20%;
		margin-top: -100px;
	}

	#fdivpicture{
		margin-left: -20px;
		
	}


	.footer{
		width: 400px;
		max-width: 400px;
		min-width: 400px;
		
		height: 10px;
		text-align: center;
	}
	#leftfooter{
		margin: 0;
		padding: 5px;
		float: none;
	}
	#rightfooter{
		display: none;
	}

	.projectcontainer div{
		display: block;
	}

}

